--- a/assets/minesweeper/index.html
+++ b/assets/minesweeper/index.html
@@ -6,10 +6,9 @@
 	<body>
 		<h2>Minesweeper</h2>
 
-
 		<form
-			action="\minesweeper\start"
-			method="GET"
+			action="\minesweeper\setup"
+			method="POST"
 		>
 			Width: <input type="text" name="width"><br>
 			Height: <input type="text" name="height"><br>
